# mymonorepo

./: AUFBAU-MONOREPO.chatgpt  ERRORs  README.md  build.sh  pyproject.toml
services/data-processor/: pyproject.toml
services/data-processor/data_processor/: processor.py
services/data-processor/tests/: test_processor.py
services/name-extractor/: pyproject.toml
services/name-extractor/name_extractor/: use_data_processor.py
services/name-extractor/name_extractor/text/: converter.py
services/name-extractor/tests/: test_cli.py
services/name_extractor/name_extractor/: cli2.py  cli3.py
services/name_extractor/tests/: test_cli2.py
