[tool.poetry]
name = "monorepo-project"
version = "0.1.0"
description = "Monorepo for name-extractor and data-processor"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.1.1"
isort = "^5.12.0"
pre-commit = "^4.1.0"

