[tool.poetry]
name = "name-extractor"
version = "0.1.0"
description = ""
authors = ["Lihua Gao <lihua.gao@deutschebahn.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
data-processor = { path = "../data-processor" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"